# tuva-demo-mcp

./: .gitignore  README.md  dbt_project.yml  main.py  pyproject.toml
.github/workflows/: outside_contributor_dbt_v1.9.4.yml  tuva_dbt_v1.8.6.yml  tuva_dbt_v1.9.4.yml  weekly_dbt_v1.9.4_snowflake_dev_build_full_refresh.yml
duckdb_utils/: display_table.py  print_schema_and_table.py
integration_tests/profiles/snowflake/: profiles.yml
seeds/: _seeds.yml
src/osler/: cli.py
tuva-health-demo/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
tuva-health-demo/integration_tests/profiles/bigquery/: profiles.yml
tuva-health-demo/integration_tests/profiles/redshift/: profiles.yml
tuva-health-demo/models/: encounter.sql
