[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tuva-demo-mcp"
dynamic = ["version"]
description = "TBD!"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dbt-core>=1.10.10",
    "dbt-duckdb>=1.9.4",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "typer>=0.17.3",
]

[project.scripts]
osler = "osler.cli:app"
